[package]
edition = "2021"
name = "fibo"
version = "0.1.0"

[dependencies]
p3-air = {path = "../air"}
p3-baby-bear = {path = "../baby-bear"}
p3-blake3 = {path = "../blake3"}
p3-challenger = {path = "../challenger"}
p3-circle = {path = "../circle"}
p3-commit = {path = "../commit"}
p3-dft = {path = "../dft"}
p3-field = {path = "../field"}
p3-fri = {path = "../fri"}
p3-goldilocks = {path = "../goldilocks"}
p3-keccak = {path = "../keccak"}
p3-matrix = {path = "../matrix"}
p3-mds = {path = "../mds"}
p3-merkle-tree = {path = "../merkle-tree"}
p3-mersenne-31 = {path = "../mersenne-31"}
p3-poseidon = {path = "../poseidon"}
p3-poseidon2 = {path = "../poseidon2"}
p3-symmetric = {path = "../symmetric"}
p3-uni-stark = {path = "../uni-stark"}
p3-util = {path = "../util"}
rand = "0.8.5"
tracing-forest = {version = "0.1.6", features = ["ansi", "smallvec"]}
tracing-subscriber = {version = "0.3.17", features = ["std", "env-filter"]}
